Closed Bug 1942348 Opened 10 months ago Closed 10 months ago

"Select->Starred Messages" seemingly non-functional

Categories

(Thunderbird :: Folder and Message Lists, defect)

defect

Tracking

(thunderbird_esr128 affected, thunderbird135 affected)

RESOLVED FIXED
136 Branch
Tracking Status
thunderbird_esr128 --- affected
thunderbird135 --- affected

People

(Reporter: welpy-cw, Assigned: welpy-cw)

Details

Attachments

(1 file)

STR:

  1. In a folder with some starred messages, open the main menu, "Edit" -> "Select" -> "Starred Messages".
  2. Select another folder.
  3. Come back to the original folder.

Expected result:
Starred messages are selected after step 1.

Actual result:
The selection seemingly doesn't have changed after step 1, while all starred messages appear selected after step 3.

Apparently there's an invalidation call for the tree missing.

Assignee: nobody → h.w.forms
Status: NEW → ASSIGNED
Target Milestone: --- → 136 Branch

Pushed by kaie@kuix.de:
https://hg.mozilla.org/comm-central/rev/5794c08dfcdd
Fix "Select starred messages". r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 10 months ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: