Bug 1942348 - Fix "Select starred messages". r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D234707

--HG--
extra : amend_source : fdbc68ffa794a988622ef20c10ea5cc9c7000056